# Vacancy-Data-Parser-and-Management

./: .gitignore  README.md  README.txt  data.json  main.py  pyproject.toml
src/: data.json  get_data_classes.py  json_saver.py  main.py  main_SkyPro.py  temp.py  utils.py  vacancies.py
