[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = ""
authors = ["Ilnar Khasanov <Khasanov1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
